# wherror

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
.github/: FUNDING.yml
impl/: Cargo.toml
impl/src/: attr.rs  expand.rs  fallback.rs  fmt.rs  prop.rs  valid.rs
src/: aserror.rs  lib.rs
tests/: test_backtrace.rs  test_box_from.rs  test_debug_fallback.rs  test_display.rs  test_enum_box_from.rs  test_error.rs  test_expr.rs  test_from.rs  test_generics.rs  test_lints.rs  test_location.rs  test_manual_debug.rs  test_no_debug_derive.rs  test_option.rs  test_optional_box_from.rs  test_path.rs  test_simple_debug.rs  test_source.rs  test_transparent.rs
tests/no-std/: Cargo.toml  test.rs
tests/ui/: bad-field-attr.rs  concat-display.rs  concat-display.stderr  debug-fallback.rs  debug-fallback.stderr  display-underscore.rs  duplicate-enum-source.rs  duplicate-fmt.rs  duplicate-struct-source.rs  duplicate-transparent.rs  expression-fallback.rs  fallback-impl-with-display.rs  from-backtrace-backtrace.rs  from-non-error-without-no-source.rs  from-non-error-without-no-source.stderr  from-not-source.rs  invalid-input-impl-anyway.rs  lifetime.rs  missing-display.rs  missing-display.stderr  missing-fmt.rs  no-display.rs  no-display.stderr  numbered-positional-tuple.rs  numbered-positional-tuple.stderr  raw-identifier.rs  same-from-type.rs  source-enum-not-error.rs  source-enum-not-error.stderr  source-enum-unnamed-field-not-error.rs  source-enum-unnamed-field-not-error.stderr  source-struct-not-error.rs  source-struct-not-error.stderr  source-struct-unnamed-field-not-error.rs  source-struct-unnamed-field-not-error.stderr  struct-with-fmt.rs  transparent-display.rs  transparent-enum-many.rs  transparent-enum-not-error.rs  transparent-enum-not-error.stderr  (+13 more)
