[package]
name = "wherror"
version = "2.2.1"
authors = ["Tom Grushka <tom@dra11y.com>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns"]
description = "The same derive(Error) macro thiserror provides + the features you want!"
documentation = "https://docs.rs/wherror"
edition = "2021"
keywords = ["thiserror", "error", "error-handling", "derive", "macro"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dra11y/wherror"
rust-version = "1.61"

[features]
default = ["std"]

# Std feature enables support for formatting std::path::{Path, PathBuf}
# conveniently in an error message.
#
#     #[derive(Error, Debug)]
#     #[error("failed to create configuration file {path}")]
#     pub struct MyError {
#         pub path: PathBuf,
#         pub source: std::io::Error,
#     }
#
# Without std, this would need to be written #[error("... {}", path.display())].
std = []

[dependencies]
wherror-impl = { version = "=2.2.1", path = "impl", package = "wherror-impl" }

[dev-dependencies]
anyhow = "1.0.73"
ref-cast = "1.0.18"
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[workspace]
members = ["impl", "tests/no-std"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition", "--extern-html-root-url=core=https://doc.rust-lang.org", "--extern-html-root-url=alloc=https://doc.rust-lang.org", "--extern-html-root-url=std=https://doc.rust-lang.org"]
